Layout issue fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -157,6 +157,17 @@ body {
   animation-delay: 300ms;
 }
 
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+  width: 0;
+  height: 0;
+}
+
 /* Skeleton shimmer */
 .skeleton {
   position: relative;
